Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-10-24 Tim
 PATCH: [ 1584004 ] Delete "Toolbar.bmp"
  Src/res deleted file: Toolbar.bmp

2006-10-12 2.6.0 Stable Release (R3712)

2006-10-12 Kimmo
 Fix building catalan language file
  Src/Languages/Catalan: MergeCatalan.rc

2006-10-11 Kimmo
 PATCH: [ 1574696 ] Fix problem in saving filefilter to project file
  Src: ProjectFilePathsDlg.cpp

2006-10-10 Takashi
 BUG: [ 1573240 ] Crash in subversion trunk
  Src: MainFrm.cpp MainFrm.h OptionsInit.cpp

2006-10-09 Takashi
 BUG: [ 1570259 ] Bookmarks GUI get reset after save
  Src/editlib: ccrystaltextview.cpp

2006-10-08 Takashi
 To fix the bug "BUG: [ 1570173 ] Crash when merging all differences",
 revert the fix for "BUG: [ 1555664 ] fail to copy all to right when enabling moved block detect"
  Src: MergeDoc.cpp

2006-10-08 Kimmo
 PATCH: [ 1555344 ] Separate active/inactive developers in Contributors.txt
  Docs/Users: Contributors.txt
 BUG: [ 1563187 ] Can't close a file compare with -e switch
  Src: MergeDoc.cpp

2006-10-07 Tim
 PATCH: [ 1572359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-04 Tim
 PATCH: [ 1570241 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-02 Gal
 BUG: [ 1566783 ] Crash on Save Project when no file is selected
  Src: MainFrm.cpp

2006-10-01 Kimmo
 PATCH: [ 1567874 ] Change manual URL to point to 2.6 manual
  Src: MainFrm.cpp

2006-09-27 Takashi
 BUG: [ 1564572 ] Leak memory on undoing
  Src: GhostTextBuffer.h
  Src/editlib: ccrystaltextbuffer.h

2006-09-27 Kimmo
 PATCH: [ 1565917 ] Register.bat to register ShellExt for 64-bit Windows
  ShellExtension: Register.bat

2006-09-26 Tim
 PATCH: [ 1565359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-09-26 Kimmo