@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-10-29 Kimmo
+ PATCH: [ 1578419 ] Fix creating WinMerge folder to MyFolders always
+  Src: MainFrm.cpp MainFrm.h
+
 2006-10-24 Tim
  PATCH: [ 1584004 ] Delete "Toolbar.bmp"
   Src/res deleted file: Toolbar.bmp
